--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
 <body>
+	<h1 id="player-id"></h1>
 	<div id="game">
 		<div class="card" id="card0">
 			<div class="face back"></div>
