Adicionando contagem de pontos dos jogadores

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
 	<h1 id="player-id"></h1>
+	<p id="points">Points: 0</p>
 	<div id="game">
 		<div class="card" id="card0">
 			<div class="face back"></div>
