Adicionando feedback de vencer, perder e empatar

--- a/public/index.html
+++ b/public/index.html
@@ -79,13 +79,19 @@
 			<div class="face front"></div>
 		</div>
 		
-		<img id="match" src="../img/match.png" />
-		
-		<div id="gameOver">
-		<img id="imgGameOver" src="../img/gameover.png" />
+		<img id="match" src="../img/match.png"/>
+	
+		<div id="vence1">
+			<img id="imgVence1" src="../img/vence1.png">
+		</div>
+		<div id="vence2">
+			<img id="imgVence2" src="../img/vence2.png">
+		</div>
+		<div id="empate">
+			<img id="imgEmpate" src="../img/empate.png">
+		</div>
 	</div>
-	</div>
-
+	
 	<script src="js/script.js"></script>
 </body>
 </html>
